# sku_dashboad

./: inventory_10k_data.xlsx  inventory_cogs_report.xlsx  inventory_data.xlsx  inventory_test_data.xlsx  main.py  make_dummy.py  new_streamlit_main.py  pyproject.toml  requirements.txt  steamlit_main.py  test.py
